//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 9 - industria textil" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Ayuntamiento {
  id Int [pk, increment]
  nombre String [not null]
  municipioId Int [not null]
  Letrero Letrero [not null]
  Municipio Municipio [not null]
}

Table Letrero {
  id Int [pk, increment]
  tamano Float [not null]
  ayuntamientoId Int [not null]
  ayuntamiento Ayuntamiento [not null]
  Calle Calle
  calleId Int
  PagoLetrero PagoLetrero [not null]
  material MaterialUnidad [not null]
  dueno Tercero [not null]
  terceroId Int [not null]
  materialUnidadId Int [not null]
}

Table Material {
  id Int [pk, increment]
  nombre String [not null]
  MaterialUnidad MaterialUnidad [not null]
}

Table MaterialUnidad {
  id Int [pk, increment]
  material Material [not null]
  unidad Unidad [not null]
  materialId Int [not null]
  unidadId Int [not null]
  costo Float [not null]
  Letrero Letrero [not null]
}

Table Unidad {
  id Int [pk, increment]
  nombre String [not null]
  referencia Float [not null]
  unidadId Int
  Unidad Unidad
  Unidades Unidad [not null]
  MaterialUnidad MaterialUnidad [not null]
}

Table Calle {
  id Int [pk, increment]
  nombre String [not null]
  referencia Float [not null]
  calleId Int
  Calle Calle
  Calles Calle [not null]
  Letrero Letrero [not null]
  Municipio Municipio
  municipioId Int
  variacionPrecioFijo Float [not null]
  variacionPrecioPorcentual Float [not null]
}

Table Pais {
  id Int [pk, increment]
  nombre String [not null]
  Provincia Provincia [not null]
}

Table Provincia {
  id Int [pk, increment]
  nombre String [not null]
  paisId Int [not null]
  Municipio Municipio [not null]
  Pais Pais [not null]
}

Table Municipio {
  id Int [pk, increment]
  nombre String [not null]
  provinciaId Int [not null]
  Calle Calle [not null]
  Ayuntamiento Ayuntamiento [not null]
  Provincia Provincia [not null]
  variacionPrecioFijo Float [not null]
  variacionPrecioPorcentual Float [not null]
}

Table Tercero {
  id Int [pk, increment]
  nombre String [not null]
  PagoLetrero PagoLetrero [not null]
  Letrero Letrero [not null]
}

Table PagoLetrero {
  id Int [pk, increment]
  Letrero Letrero [not null]
  Tercero Tercero [not null]
  precio Float [not null]
  estado EstadoPago [not null]
  letreroId Int [not null]
  terceroId Int [not null]
}

Enum EstadoPago {
  PENDIENTE
  PAGADO
  CANCELADO
}

Ref: Ayuntamiento.municipioId > Municipio.id

Ref: Letrero.ayuntamientoId > Ayuntamiento.id

Ref: Letrero.calleId > Calle.id

Ref: Letrero.materialUnidadId > MaterialUnidad.id

Ref: Letrero.terceroId > Tercero.id

Ref: MaterialUnidad.materialId > Material.id

Ref: MaterialUnidad.unidadId > Unidad.id

Ref: Unidad.unidadId - Unidad.id

Ref: Calle.calleId - Calle.id

Ref: Calle.municipioId > Municipio.id

Ref: Provincia.paisId > Pais.id

Ref: Municipio.provinciaId > Provincia.id

Ref: PagoLetrero.letreroId > Letrero.id

Ref: PagoLetrero.terceroId > Tercero.id